<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/searchOption"
          android:title="@string/search"
          android:orderInCategory="1"
          android:alphabeticShortcut="e"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/browseOption"
          android:title="@string/browse"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          android:orderInCategory="1"
          android:alphabeticShortcut="e"
          tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/watchListOption"
          android:title="@string/watch_list"
          android:orderInCategory="1"
          android:alphabeticShortcut="e"
          android:titleCondensed="WatchList"
          app:showAsAction="ifRoom"
          android:showAsAction="ifRoom"
          tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/aboutOption"
          android:title="@string/about"
          android:orderInCategory="2"
          android:alphabeticShortcut="d"
          android:titleCondensed="Abt"
          android:icon="@android:drawable/ic_menu_info_details">

    </item>
</menu>