<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/appBackground">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:fontFamily="@font/palanquin_dark"
            android:text="@string/browse_instructions"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/textPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/netflixIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/netflix"
                android:alpha="0.4"/>
            <ImageView
                android:id="@+id/huluIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/hulu"
                android:alpha="0.4"/>
            <ImageView
                android:id="@+id/primeIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/prime"
                android:alpha="0.4"/>
            <ImageView
                android:id="@+id/hboIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/hbo"
                android:alpha="0.4"/>


        </LinearLayout>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/allRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/all"
            android:layout_weight="2"/>
        <RadioButton
            android:id="@+id/movieRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/movie"
            android:layout_weight="2"/>
        <RadioButton
            android:id="@+id/tvRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/television"
            android:layout_weight="2"/>

    </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:onClick="browseTitles"
            android:text="@string/browse"/>

        <ListView
            android:id="@+id/browse_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"/>

    </LinearLayout>
