<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:background="@color/appBackground">

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:layout_weight="3"
                      android:orientation="vertical"
                      android:padding="1dp">

            <TextView
                android:id="@+id/title_info_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/textPrimary"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/title_info_year"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/title_info_info"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/title_info_genre"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/watch_list_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:onClick="addToWatchList"
                android:textColor="@color/textPrimary"/>
        </LinearLayout>

    <ImageView
        android:id="@+id/title_info_image"
        android:layout_width="0dp"
        android:layout_height="138dp"
        android:layout_weight="2"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/description"
        android:textColor="@color/textPrimary"/>
    <TextView
        android:id="@+id/title_info_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/starring"
        android:textColor="@color/textPrimary"/>
    <TextView
        android:id="@+id/title_info_starring"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/where_to_watch"
        android:textColor="@color/textPrimary"/>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1">
            <ImageView
                android:id="@+id/service1image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/service1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1">
            <ImageView
                android:id="@+id/service2image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/service2TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1">
            <ImageView
                android:id="@+id/service3image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/service3TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/service4image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/service4TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>